fixed: search box too much to right        button above user info widget

--- a/DSH.Main.Web/Boilerplate/src/modules/baseModule/theme/gray/common.css
+++ b/DSH.Main.Web/Boilerplate/src/modules/baseModule/theme/gray/common.css
@@ -327,6 +327,7 @@ p{
 	background-color: White;
 	border: 5px solid Silver;
 	position: relative;
+    z-index: 100;
 }
 
 
